--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,175 @@
 body {
-    background: skyblue;
+    font-family: 'M PLUS 1p', sans-serif;
+    background: white;
+    color: #333;
+    line-height: 1.5;
+}
+
+
+
+input {
+    font-size: 100%;
+}
+
+.title {
+    text-align: center;
+    font-size: 45px;
+}
+
+.main {
+    text-align: center;
+    font-size: 30px;
+}
+
+.input {
+    border-radius: 20px;
+    padding: 10px;
+    margin: 0 10px;
+}
+
+#rule-open, #start {
+    background-color: rgb(222, 175, 175);
+    color: black;
+    border: none;
+    border-radius: 15px;
+    padding: 7px 15px;
+    border-bottom: 7px solid #d57e7e;
+    box-shadow: 0px 1px 2px black;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+#rule-open:hover {
+    margin-top: 5px;
+    border-bottom: 1px solid #d57e7e;
+}
+
+#start:hover {
+    margin-top: 5px;
+    border-bottom: 1px solid #d57e7e;
+}
+
+
+#gameover {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(113, 109, 109, 0.5);
+    z-index: 10;
+}
+
+.gameover-content {
+    background-color: #ce5e5e;
+    margin: 15% auto;
+    width: 50%;
+    box-shadow: 0 2px 7px black;
+    border-radius: 20px;
+    animation: popup;
+    animation-duration: 1.1s;
+    border-radius: 20px;
+}
+
+.gameover-header {
+    font-size: 25px;
+    /* padding: 15px 10px; */
+    padding-bottom: 0px;
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.gameover-body {
+    font-size: 30px;
+    /* padding: 20px 0; */
+    padding-bottom: 15px;
+    display: flex;
+    justify-content: center;
+}
+
+
+#modal {
+    display: none;
+    position:  fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(113, 109, 109, 0.5);
+    z-index: 10;
+    overflow-x: scroll;
+
+}
+.modal-content {
+    background-color: #f4f4f4;
+    margin: 2% auto;
+    width: 50%;
+    box-shadow: 0 2px 7px black;
+    animation-name: popup;
+    animation-duration: 1.1s;
+    border-radius: 20px;
+}
+
+.modal-header {
+    /* width: 420px;
+    height: 10px; */
+    background-color: rgb(222, 175, 175);
+    padding: 2px 5px;
+    padding-left: 280px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal-body {
+    /* padding: 2px 10px; */
+}
+
+.modalClose {
+    font-size: 2.0rem;
+    cursor: pointer;
+}
+
+.button {
+    font-size: 50%;
+    background: #c4d798;
+    padding: 2px 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#history {
+    display: none;
+    position:  fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(113, 109, 109, 0.5);
+    z-index: 10;
+    overflow-x: scroll;
+}
+
+.history-content {
+    background-color: #f4f4f4;
+    margin: 2% auto;
+    width: 50%;
+    box-shadow: 0 2px 7px black;
+    animation-name: popup;
+    animation-duration: 1.1s;
+    border-radius: 20px;
+}
+.history-body {
+    padding: 10px;
+}
+
+@keyframes popup {
+    from {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
